# near-vm

./: .gitignore  README.md  package.json  result.json
context/: bob.json  system.json  zs.json
contract/: Cargo.toml
contract/src/: lib.rs
host/: host.ts  vm.ts  worker.ts
near-vm-errors/: Cargo.toml
near-vm-errors/src/: lib.rs
near-vm-logic/: Cargo.toml
near-vm-runner/: Cargo.toml
near-vm-runner-standalone/: Cargo.toml
near-vm-runner-standalone/src/: main.rs
near-vm-runner/src/: cache.rs
scripts/: build.ts  run.cjs  vm.ts
src/near-vm-runner/: Cargo.toml
src/near-vm-runner/src/: imports.rs  lib.rs  runner.rs  tests.rs  wasmi_runner.rs
src/near-vm-runner/src/tests/: compile_errors.rs  contract_preload.rs  rs_contract.rs  runtime_errors.rs  wasm_validation.rs
wasm/: greeting.wasm
