[package]
name = "near-vm-errors"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/nearprotocol/nearcore"
homepage = "https://github.com/nearprotocol/nearcore"
description = """
Error that can occur inside Near Runtime encapsulated in a separate crate. Might merge it later.
"""

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }

borsh = "0.9"
deepsize = { version = "0.2.0", optional = true }
near-account-id = { git = "https://github.com/near/nearcore" }

[features]
deepsize_feature = ["deepsize", "near-account-id/deepsize_feature"]
